...
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/latestTemperature_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="time"
        android:minWidth="48dp"
        android:minHeight="48dp"
...
        android:paddingHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latestTemperature_time">


        <TextView
            android:id="@+id/latestTemperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/measurement"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/latestTemperature_measurementType"
...
