...
    <string name="add_area">Add New Area</string>
    <string name="area_name">Area Name</string>
    <string name="description">Description</string>
    <string name="noPigs">Number Of Pigs</string>
    <string name="create">Create</string>
    <string name="measurementType">type</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="hardwareId">Hardware Id</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="role">Role</string>
    <string name="measurement">Measurement</string>
    <string name="time">Time</string>
    <string name="guest" translatable="false">Guest</string>
...
