...
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/continueAsGuest"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/continue_as_a_guest" />

...
