<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/intro_farmerama" />

    <Button
        android:id="@+id/next"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="13dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="PROCEED"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/skip"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="285dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="2dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:text="SKIP"
        android:textColor="?android:attr/colorPrimary"
        android:textSize="20sp" />

</RelativeLayout>